2000-02-08  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4: Formatting changes.
	* acspecific.m4: Likewise.

2000-02-08  Akim Demaille  <akim@epita.fr>

	Use the style we promote.

	* doc/autoconf.texi (Header Templates): Promote #if over #ifdef;
	and #undef over #define in templates.
	* acspecific.m4 (AC_DECL_SYS_SIGLIST, AC_FUNC_MMAP,
	AC_FUNC_SETPGRP, AC_FUNC_VFORK, AC_FUNC_SELECT_ARGTYPES): Use #if,
	not #ifdef and #ifndef, indent CPP directives.

2000-02-08  Akim Demaille  <akim@epita.fr>

	Quote properly AC_SHELL_IFELSE and callers.

	* acgeneral.m4 (AC_SHELL_IFELSE): Don't overquote $1.
	(AC_VAR_IF_SET, AC_CHECK_MEMBER, AC_CHECK_LIB, AC_CHECK_HEADER,
	AC_CHECK_DECL, AC_CHECK_FUNC, AC_CHECK_TYPE_INTERNAL): Quote the
	first argument of AC_SHELL_IFELSE.

2000-02-08  Akim Demaille  <akim@epita.fr>

	It seems quite delicate to have AC_INCLUDES_DEFAULT insert the
	default headers in the INIT section of configure: the reason is
	that AC_INCLUDES_DEFAULT is called unquoted, and this results in
	an un expected behavior.  Thanks to Roman V. Shaposhnick for the
	details.

	The current implementation is not satisfying: the default headers
	are defined in the INIT section even if they are not used.

	* acgeneral.m4 (Prologue of AC_INCLUDES_DEFAULTS): Dump the
	definition of ac_includes_default in the INIT section of
	configure.
	(AC_INCLUDES_DEFAULTS): Use it.

2000-02-08  Akim Demaille  <akim@epita.fr>

	* TODO: Updated.
	* THANKS: Updated.

2000-02-08  Akim Demaille  <akim@epita.fr>

	* libm4.m4 (m4_for): New macro.

2000-02-07  Akim Demaille  <akim@epita.fr>

	Stay in Autoconf's name space.

	* acspecific.m4 (AC_F77_LIBRARY_LDFLAGS): Prefixed with 'ac_':
	arg, save_arg, i, seen, previous_arg, ld_run_path.
	Renamed f77_link_output as ac_link_output.
	* tests/actest.m4 (AC_ENV_SAVE): Don't note F77, FFLAGS, FLIBS,
	G77, f77_case, f77_underscore.

2000-02-07  Akim Demaille  <akim@epita.fr>

	Use `#' for comments instead of `dnl'.