@@ -73,6 +73,10 @@ having to tell users to rm config.cache before sending us config.log.
 I don't understand why we have this weird system of AC_SAVE and
 RESTORE, why not push/pop etc?
 
+** AC_LANG
+I don't understand why we have this weird system of AC_SAVE and
+RESTORE, why not push/pop etc?
+
 ** AC_PROVIDE
 I think it is the epilogue that should provide, not the prologue.  Not
 clear: there are risks of circular dependencies :(.  In fact the
