@@ -1,5 +1,15 @@
 2000-02-08  Akim Demaille  <akim@epita.fr>
 
+	Promote AC_LANG_CASE.
+
+	* acgeneral.m4 (AC_TRY_COMPILER, AC_TRY_LINK_FUNC, AC_CHECK_LIB,
+	AC_TRY_COMPILE, AC_TRY_LINK, AC_TRY_RUN_NATIVE, AC_CHECK_FUNC):
+	Use AC_LANG_CASE instead of ifelse (AC_LANG, ...).
+	(AC_TRY_LINK_FUNC): Quote the body the the AC_DEFUN (whoa, how
+	could this survive so long?!?).
+
+2000-02-08  Akim Demaille  <akim@epita.fr>
+
 	* acgeneral.m4: Formatting changes.
 	* acspecific.m4: Likewise.
 
